Workshop03/myapp-app-v2 old.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nwapp-deploy-v2
  labels:
    name: nwapp-deploy-v2
    version: "v2"
    app: nwappv1
spec:
  replicas: 3
  selector:
    matchLabels:
      name: nwappv2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: nwappv2
      labels:
        name: nwappv2
        version: "v2"
        app: nwappv2
    spec:
      containers:
      - name: nwapp-container
        image: stackupiss/northwind-app:v2
        imagePullPolicy: Always
        ports:
        - name: nwappv2-http
          containerPort: 3000
