Workshop03/mydb-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nwdb-deploy
  labels:
    name: nwdb-deploy
    version: "v1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nwdb
  template:
    metadata:
      name: nwdb
      labels:
        app: nwdb
    spec:
      volumes:
      - name: nwdb-vol
        persistentVolumeClaim:
          claimName: nwdb-pvc
      containers:
      - name: nwdb
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: nwdb-vol
        image: stackupiss/northwind-db:v1
        imagePullPolicy: Always
        ports:
        - name: nwdb-port
          containerPort: 3306
