Workshop03/myapp-svc-v2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-v2
  labels:
    name: myapp-svc-v2
    version: v2
spec:
  type: ClusterIP
  selector:
    app: nwappv2
    version: v2
  ports:
  - name: myappsvcv2-http
    port: 80
    targetPort: nwappv2-http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nwapp-deploy-v2
  labels:
    name: nwapp-deploy-v2
    version: v2
    app: nwappv2
spec:
  selector:
    matchLabels:
      name: nwappv2
      version: v2
      app: nwappv2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: nwappv2
      labels:
        name: nwappv2
        version: v2
        app: nwappv2
    spec:
      containers:
      - name: nwappv2-container
        image: stackupiss/northwind-app:v2
        imagePullPolicy: Always
        ports:
        - name: nwappv2-http
          containerPort: 3000
