Workshop03/mydb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mydb-svc
  labels:
    name: mydb-svc
spec:
  type: ClusterIP
  selector:
    app: nwdb
  ports:
  - name: mydbsvc-port
    port: 3306
    targetPort: nwdb-port
