Workshop03/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # rewrite rule here
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    # default
    - http:
        paths:
          - backend:
              serviceName: myapp-svc-v2
              servicePort: 80
    
    - host: "appv1.157.230.193.69.nip.io"
      http:
        paths:
          - backend:
              serviceName: myapp-svc-v1
              servicePort: 80
    
    - host: "appv2.157.230.193.69.nip.io"
      http:
        paths:
          - backend:
              serviceName: myapp-svc-v2
              servicePort: 80


  #  - http:
  #      paths:
  #        - path: /v1
  #          backend:
  #            serviceName: myapp-svc-v1
  #            servicePort: 80
  #  - http:
  #      paths:
  #        - path: /v2
  #          backend:
  #            serviceName: myapp-svc-v2
  #            servicePort: 80
